# riptide_states

./: CMakeLists.txt  package.xml  setup.py
cfg/: task_poses.yaml
src/riptide_states/: GetFrontOf.py  TransferToGlobal.py  big_align_state.py  big_dawgs_gotta_eat_state.py  big_depth_parameter_state.py  big_depth_state.py  big_distance_state.py  big_gate_maneuver_state.py  big_mapping_state.py  big_move_state.py  big_pitch_parameter_state.py  big_pitch_state.py  big_rectangle_state.py  big_roll_parameter_state.py  big_roll_state.py  big_translate_parameter_state.py  big_translate_state.py  big_yaw_parameter_state.py  big_yaw_state.py  find_gate_task_state.py  find_task_location.py  flatten_state.py  pose_reader.py  position_parameter_state.py  relative_move_state.py  test.py
