<package>
  <name>riptide_states</name>
  <version>1.0.0</version>
  <description>
     Provides a collection riptide of generic states mainly for development and debugging purposes.
  </description>
  <maintainer email="ced@de.bosch.com">Philipp Schillinger</maintainer>
  <maintainer email="sm6@cornell.edu">Spyros Maniatopoulos</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>rospy</run_depend>
  <run_depend>flexbe_core</run_depend>
  <run_depend>flexbe_testing</run_depend>
  <run_depend>roslaunch</run_depend>
  <run_depend>moveit_commander</run_depend>
  <run_depend>moveit</run_depend>

  <export>
    <flexbe_states />
  </export>

</package>
